fix expression wrapping style & add exercise option to force new attempt creation after page reload (#221)

--- a/src/main/js/styles/index.css
+++ b/src/main/js/styles/index.css
@@ -74,7 +74,7 @@ body ul {
   position: relative;
   line-height: 17px;
   color: black;
-  margin: 0 2px;
+  margin: 10px 2px;
 }
 
 .comp-ph-expr .comp-ph-expr-op-btn {
